--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9001
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ipracticedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/ipracticedb?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
