--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,11 @@
+spring.datasource.url=jdbc:postgresql://ec2-44-193-182-0.compute-1.amazonaws.com:5432/d3urek66e7od11
+spring.datasource.username=ihcaheldsmwsbh
+spring.datasource.password=d3urek66e7od11
+spring.jpa.show-sql=true
 
-#Port
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-server.port=${port:5000}
-
-
-
-#Database
-
-spring.datasource.url=${JDBC_DATABASE_URL:}
-
-spring.datasource.username=${JDBC_DATABASE_USERNAME:}
-
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:}
-
-spring.datasource.driverClassName=${JDBC_DATABASE_DRIVER:}
-
-
-
-#Hibernate
-
-spring.jpa.properties.hibernate.dialect=${SPRING_JPA_HIBERNATE_DIALECT:}
-
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-
-spring.jpa.properties.hibernate.show.sql = true
-
-spring.jpa.properties.hibernate.format_sql = true
-
-spring.jpa.generate-ddl=true
-
-spring.jpa.properties.hibernate.hb2dll.auto = update
-
-logging.level.org.hibernate.SQL=DEBUG
-
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
